# recurrers

./: .gitignore  LICENSE  README.MD  adapter.py  momentum.py  pyproject.toml  recurrer.py  recurrers.py
recurrers/: __init__.py  adapter.py  helpers.py  minrnns.py  recurrer.py  recurrers.py  residual.py
