[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "recurrers"
version = "0.1.0"
authors = [
    { name="GiantLuigi4" },
]
description = "A flexible architiecture designed for recurrent modeling"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torch"
]

[project.urls]
Homepage = "https://github.com/your-username/your-repo"
